ruby/sambamba.h

void attach(); /* must be called to initialize D runtime */
void detach();
/*
void* memcpy(void* dest, void* src, size_t n);
void free(void* ptr);
*/

void d_free(void*); /* frees the pointer and notifies D garbage collector */
char* last_error_message(void); /* zero-terminated error message string */
/* --------------------- Main types used throughout ------------------------- */

/* In D, the array layout is as follows */
typedef struct { char* buf; size_t len; } dstring_s;
typedef void* bam_reader_t; /* BAM reader object */
typedef struct {
    size_t len;          /* length of raw data */
    uint8_t* buf;  /* raw data */
    bam_reader_t reader; /* parent reader */
} bam_read_s;
                   
typedef bam_read_s* bam_read_t; /* single read */
typedef void* sam_header_t; /* SAM header */
/* For now, the interface for SAM header is very limited:
   1) get header from a BAM file
   2) get its text representation
   3) create new header from text

   (anyway, text manipulation is not a big deal in most dynamic languages.)
 */
sam_header_t bam_reader_header(bam_reader_t);
dstring_s* df_sam_header_text(sam_header_t);
sam_header_t sam_header_new(char* header_text);
/* -------------------------- D ranges of reads ----------------------------- */

typedef void* bam_read_range_t; /* range (in D sense) of BAM reads */
typedef bam_read_t (*next_func_t)(void);
/* callback that returns next BAM read or NULL to stop iteration,
   can be passed to this function and made into a D range */
bam_read_range_t bam_read_range_adapter_new(next_func_t);
/* Iteration is meant to be done as follows: 
   1) get the size of raw data using bam_readrange_front_alloc_size 
   2) if the size is 0, the range is empty; stop iteration 
   3) otherwise, allocate chunk of memory in the target language
      and pass it to bam_readrange_front_copy_into_and_pop_front.
      It will fill the buffer, return bam_reader_t object, and
      move to the next read.
   4) create new bam_read_t object and fill its fields
      (length of raw data, pointer to raw data, and reader).
      All its memory is now managed by _target_ language, not D.
   
   This looks quite cumbersome, and it surely is, but:
   1) If the memory was managed by D, finalizers would be needed
      in order to free the memory, which is a huge performance hit.
   2) Only two FFI calls per read make for less overhead. */
size_t bam_readrange_front_alloc_size(bam_read_range_t);
bam_reader_t 
bam_readrange_front_copy_into_and_pop_front(bam_read_range_t, const uint8_t* buffer);
typedef struct {
    reference_info_s* buf;
    size_t len;
} areference_info_s; /* array containing reference sequence information */
/* --------------------- BAM reader object -------- ------------------------- */

typedef void* task_pool_t; /* D task pool */
task_pool_t task_pool_new(uint32_t n_threads);
/* MUST be called to terminate the threads */
int32_t task_pool_finish(task_pool_t);
 

/* constructors */
bam_reader_t bam_reader_new(const char* filename);
bam_reader_t bam_reader_new2(const char*, task_pool_t);
/* zero-terminated filename */
char* bam_reader_filename(bam_reader_t);
 

/* create BAI index file (unless it already exists and !force) */
void bam_reader_create_index(bam_reader_t, bool force);
 

/* all reads in the BAM file */
bam_read_range_t bam_reader_reads(bam_reader_t);
/* fetch reads overlapping a region */
bam_read_range_t 
bam_reader_fetch(bam_reader_t, char* refname, uint32_t from, uint32_t to);
/* reference sequences presented in the file */
areference_info_s bam_reader_references(bam_reader_t);
 

/* --------------------------------- BAM read ------------------------------- */

/* setter function returns void iff it doesn't reallocate */
/* otherwise, it returns modified buffer, which contents must be copied */

/* get SAM representation of the read */
dstring_s* df_bam_read_to_sam(bam_read_t);
/* '+' or '-' */
char bam_read_strand(bam_read_t);
char bam_read_mate_strand(bam_read_t);
/* character must be checked in the target language */
void bam_read_set_strand(bam_read_t, char);
void bam_read_set_mate_strand(bam_read_t, char);
/* read sequence length (bp) */
size_t bam_read_sequence_length(bam_read_t);
 

/* copy the sequence into a preallocated buffer 
  (get its size using the above function, and add one for the '\0') */
void bam_read_copy_sequence(const bam_read_t, char* buf);