ruby/sambamba-ffi.rb

# Generated by ffi-gen. Please do not change this file by hand.

module SambambaFFI
  def self.attach_function(name, *_)
    begin; super; rescue FFI::NotFoundError => e
      (class << self; self; end).class_eval { define_method(name) { |*_| raise e } }
    end
  end
  
  # (Not documented)
  # 
  # @method attach()
  # @return [nil] 
  # @scope class
  attach_function :attach, :attach, [], :void
  
  # must be called to initialize D runtime
  # 
  # @method detach()
  # @return [nil] 
  # @scope class
  attach_function :detach, :detach, [], :void
  
  # (Not documented)
  # 
  # @method memcpy(dest, src, n)
  # @param [FFI::Pointer(*Void)] dest 
  # @param [FFI::Pointer(*Void)] src 
  # @param [Integer] n 
  # @return [FFI::Pointer(*Void)] 
  # @scope class
  attach_function :memcpy, :memcpy, [:pointer, :pointer, :ulong], :pointer
  
  # (Not documented)
  # 
  # @method free(ptr)
  # @param [FFI::Pointer(*Void)] ptr 
  # @return [nil] 
  # @scope class
  attach_function :free, :free, [:pointer], :void
  
  # (Not documented)
  # 
  # @method d_free(void)
  # @param [FFI::Pointer(*Void)] void 
  # @return [nil] 
  # @scope class
  attach_function :d_free, :d_free, [:pointer], :void
  
  # frees the pointer and notifies D garbage collector
  # 
  # @method last_error_message()
  # @return [String] 
  # @scope class
  attach_function :last_error_message, :last_error_message, [], :string
  
  # In D, the array layout is as follows
  # 
  # = Fields:
  # :buf ::
  #   (String) 
  # :len ::
  #   (Integer) 
  class DstringS < FFI::Struct
    layout :buf, :string,
           :len, :ulong
  end
  
  # (Not documented)
  # 
  # = Fields:
  # :buf ::
  #   (FFI::Pointer(*Int8T)) 
  # :len ::
  #   (Integer) 
  class Aint8S < FFI::Struct
    layout :buf, :pointer,
           :len, :ulong
  end
  
  # (Not documented)
  # 
  # = Fields:
  # :buf ::
  #   (FFI::Pointer(*Uint8T)) 
  # :len ::
  #   (Integer) 
  class Auint8S < FFI::Struct
    layout :buf, :pointer,
           :len, :ulong
  end
  
  # (Not documented)
  # 
  # = Fields:
  # :buf ::
  #   (FFI::Pointer(*Int16T)) 
  # :len ::
  #   (Integer) 
  class Aint16S < FFI::Struct
    layout :buf, :pointer,
           :len, :ulong
  end
  
  # (Not documented)
  # 
  # = Fields:
  # :buf ::
  #   (FFI::Pointer(*Uint16T)) 
  # :len ::
  #   (Integer) 
  class Auint16S < FFI::Struct
    layout :buf, :pointer,
           :len, :ulong
  end
  
  # (Not documented)
  # 
  # = Fields:
  # :buf ::
  #   (FFI::Pointer(*Int32T)) 
  # :len ::
  #   (Integer) 
  class Aint32S < FFI::Struct
    layout :buf, :pointer,
           :len, :ulong
  end
  
  # (Not documented)
  # 
  # = Fields:
  # :buf ::
  #   (FFI::Pointer(*Uint32T)) 
  # :len ::
  #   (Integer) 
  class Auint32S < FFI::Struct
    layout :buf, :pointer,
           :len, :ulong
  end
  
  # (Not documented)
  # 
  # = Fields:
  # :buf ::
  #   (FFI::Pointer(*Float)) 
  # :len ::
  #   (Integer) 
  class AfloatS < FFI::Struct
    layout :buf, :pointer,
           :len, :ulong
  end
  
  # BAM reader object
  # 
  # = Fields:
  # :len ::
  #   (Integer) length of raw data
  # :buf ::
  #   (FFI::Pointer(*Uint8T)) raw data
  # :reader ::
  #   (FFI::Pointer(BamReaderT)) parent reader
  class BamReadS < FFI::Struct
    layout :len, :ulong,
           :buf, :pointer,
           :reader, :pointer
  end
  
  # For now, the interface for SAM header is very limited:
  #    1) get header from a BAM file
  #    2) get its text representation
  #    3) create new header from text
  # 
  #    (anyway, text manipulation is not a big deal in most dynamic languages.)
  # 
  # @method bam_reader_header(bam_reader_t)
  # @param [FFI::Pointer(BamReaderT)] bam_reader_t 
  # @return [FFI::Pointer(SamHeaderT)] 
  # @scope class
  attach_function :bam_reader_header, :bam_reader_header, [:pointer], :pointer
  
  # (Not documented)
  # 
  # @method df_sam_header_text(sam_header_t)
  # @param [FFI::Pointer(SamHeaderT)] sam_header_t 
  # @return [DstringS] 
  # @scope class
  attach_function :df_sam_header_text, :df_sam_header_text, [:pointer], DstringS
  
  # (Not documented)
  # 
  # @method sam_header_new(header_text)
  # @param [String] header_text 
  # @return [FFI::Pointer(SamHeaderT)] 
  # @scope class
  attach_function :sam_header_new, :sam_header_new, [:string], :pointer
  
  # callback that returns next BAM read or NULL to stop iteration,
  #    can be passed to this function and made into a D range
  # 
  # @method bam_read_range_adapter_new(next_func_t)
  # @param [FFI::Pointer(NextFuncT)] next_func_t 
  # @return [FFI::Pointer(BamReadRangeT)] 
  # @scope class
  attach_function :bam_read_range_adapter_new, :bam_read_range_adapter_new, [:pointer], :pointer
  
  # Iteration is meant to be done as follows: 
  #    1) get the size of raw data using bam_readrange_front_alloc_size 
  #    2) if the size is 0, the range is empty; stop iteration 
  #    3) otherwise, allocate chunk of memory in the target language
  #       and pass it to bam_readrange_front_copy_into_and_pop_front.
  #       It will fill the buffer, return bam_reader_t object, and
  #       move to the next read.
  #    4) create new bam_read_t object and fill its fields
  #       (length of raw data, pointer to raw data, and reader).
  #       All its memory is now managed by _target_ language, not D.
  #    
  #    This looks quite cumbersome, and it surely is, but:
  #    1) If the memory was managed by D, finalizers would be needed
  #       in order to free the memory, which is a huge performance hit.
  #    2) Only two FFI calls per read make for less overhead.
  # 
  # @method bam_readrange_front_alloc_size(bam_read_range_t)
  # @param [FFI::Pointer(BamReadRangeT)] bam_read_range_t 
  # @return [Integer] 
  # @scope class
  attach_function :bam_readrange_front_alloc_size, :bam_readrange_front_alloc_size, [:pointer], :ulong
  
  # (Not documented)
  # 
  # @method bam_readrange_front_copy_into_and_pop_front(bam_read_range_t, buffer)
  # @param [FFI::Pointer(BamReadRangeT)] bam_read_range_t 
  # @param [String] buffer 
  # @return [FFI::Pointer(BamReaderT)] 
  # @scope class
  attach_function :bam_readrange_front_copy_into_and_pop_front, :bam_readrange_front_copy_into_and_pop_front, [:pointer, :buffer_out], :pointer
  
  # ------------------ Reference sequence information ------------------------
  # 
  # = Fields:
  # :name_len ::
  #   (Integer) length of reference sequence name
  # :name_buf ::
  #   (String) reference sequence name (zero-terminated)
  # :length ::
  #   (Integer) length of reference sequence
  class ReferenceInfoS < FFI::Struct
    layout :name_len, :ulong,
           :name_buf, :string,
           :length, :int
  end
  
  # information about single reference sequence
  # 
  # = Fields:
  # :buf ::
  #   (ReferenceInfoS) 
  # :len ::
  #   (Integer) 
  class AreferenceInfoS < FFI::Struct
    layout :buf, ReferenceInfoS,
           :len, :ulong
  end
  
  # array containing reference sequence information
  # 
  # = Fields:
  # :buf ::
  #   (FFI::Pointer(*Uint8T)) 
  # :len ::
  #   (Integer) 
  class BufferS < FFI::Struct
    layout :buf, :pointer,
           :len, :ulong
  end
  
  # D task pool
  # 
  # @method task_pool_new(n_threads)
  # @param [Integer] n_threads 
  # @return [FFI::Pointer(TaskPoolT)] 
  # @scope class
  attach_function :task_pool_new, :task_pool_new, [:uint], :pointer
  
  # MUST be called to terminate the threads
  # 
  # @method task_pool_finish(task_pool_t)
  # @param [FFI::Pointer(TaskPoolT)] task_pool_t 
  # @return [Integer] 
  # @scope class
  attach_function :task_pool_finish, :task_pool_finish, [:pointer], :int
  
  # constructors
  # 
  # @method bam_reader_new(filename)
  # @param [String] filename 
  # @return [FFI::Pointer(BamReaderT)] 
  # @scope class
  attach_function :bam_reader_new, :bam_reader_new, [:string], :pointer
  
  # (Not documented)
  # 
  # @method bam_reader_new2(string, task_pool_t)
  # @param [String] string 
  # @param [FFI::Pointer(TaskPoolT)] task_pool_t 
  # @return [FFI::Pointer(BamReaderT)] 
  # @scope class
  attach_function :bam_reader_new2, :bam_reader_new2, [:string, :pointer], :pointer
  
  # zero-terminated filename
  # 
  # @method bam_reader_filename(bam_reader_t)
  # @param [FFI::Pointer(BamReaderT)] bam_reader_t 
  # @return [String] 
  # @scope class
  attach_function :bam_reader_filename, :bam_reader_filename, [:pointer], :string
  
  # create BAI index file (unless it already exists and !force)
  # 
  # @method bam_reader_create_index(bam_reader_t, force)
  # @param [FFI::Pointer(BamReaderT)] bam_reader_t 
  # @param [Integer] force 
  # @return [nil] 
  # @scope class
  attach_function :bam_reader_create_index, :bam_reader_create_index, [:pointer, :int], :void
  
  # all reads in the BAM file
  # 
  # @method bam_reader_reads(bam_reader_t)
  # @param [FFI::Pointer(BamReaderT)] bam_reader_t 
  # @return [FFI::Pointer(BamReadRangeT)] 
  # @scope class
  attach_function :bam_reader_reads, :bam_reader_reads, [:pointer], :pointer
  
  # fetch reads overlapping a region
  # 
  # @method bam_reader_fetch(bam_reader_t, refname, from, to)
  # @param [FFI::Pointer(BamReaderT)] bam_reader_t 
  # @param [String] refname 
  # @param [Integer] from 
  # @param [Integer] to 
  # @return [FFI::Pointer(BamReadRangeT)] 
  # @scope class
  attach_function :bam_reader_fetch, :bam_reader_fetch, [:pointer, :string, :uint, :uint], :pointer
  
  # reference sequences presented in the file
  # 
  # @method bam_reader_references(bam_reader_t)
  # @param [FFI::Pointer(BamReaderT)] bam_reader_t 
  # @return [AreferenceInfoS] 
  # @scope class
  attach_function :bam_reader_references, :bam_reader_references, [:pointer], AreferenceInfoS.by_value
  
  # get SAM representation of the read
  # 
  # @method df_bam_read_to_sam(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [DstringS] 
  # @scope class
  attach_function :df_bam_read_to_sam, :df_bam_read_to_sam, [BamReadS], DstringS
  
  # '+' or '-'
  # 
  # @method bam_read_strand(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_strand, :bam_read_strand, [BamReadS], :char
  
  # (Not documented)
  # 
  # @method bam_read_mate_strand(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_mate_strand, :bam_read_mate_strand, [BamReadS], :char
  
  # character must be checked in the target language
  # 
  # @method bam_read_set_strand(bam_read_s, char_s)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] char_s 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_strand, :bam_read_set_strand, [BamReadS, :char], :void
  
  # (Not documented)
  # 
  # @method bam_read_set_mate_strand(bam_read_s, char_s)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] char_s 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_mate_strand, :bam_read_set_mate_strand, [BamReadS, :char], :void
  
  # read sequence length (bp)
  # 
  # @method bam_read_sequence_length(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_sequence_length, :bam_read_sequence_length, [BamReadS], :ulong
  
  # copy the sequence into a preallocated buffer 
  #   (get its size using the above function, and add one for the '\0')
  # 
  # @method bam_read_copy_sequence(bam_read_s, buf)
  # @param [BamReadS] bam_read_s 
  # @param [String] buf 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_copy_sequence, :bam_read_copy_sequence, [BamReadS, :string], :void
